# monaco

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  MCCase.py  MCPlot.py  MCSim.py  MCVal.py  MCVar.py  README.md  codecov.yml  monaco.bib  pyproject.toml  pytest.ini  requirements.txt  rocket_example.py  rocket_example_postprocess.py  rocket_example_preprocess.py  rocket_example_sim.py  run_script.py  setup.py
.github/workflows/: builds.yml  publish.yml  tests.yml  unit_tests.yml
Monaco/: MCCase.py  MCSim.py  MCVal.py  MCVar.py  MCVarStat.py  README.md  gaussian_statistics.py  helper_functions.py  integration_statistics.py  mc_multi_plot.py  mc_plot.py  mc_sampling.py  order_statistics.py  sobol.py  sobol1111.tsv
PyMonteCarlo/: MCCase.py  MCMultiPlot.py  MCOrderStats.py  MCPlot.py  MCSim.py  MCStats.py  MCVal.py  MCVar.py  MCVarStat.py  README.md  helper_functions.py  mc_multi_plot.py  mc_plot.py  order_statistics.py
docs/: conf.py  index.rst  sampling_methods.md  statistical_distributions.md
docs/images/: distributions.py  example.py  volume_of_hypersphere.py
docs/source/: api_reference.rst  basic_architecture.md  basic_workflow.md  conf.py  index.rst  installation.md  processing_methods.md  sampling_methods.md  statistical_distributions.md
examples/: README.md
examples/baseball/: README.md  baseball_example_monte_carlo_sim.py  baseball_example_postprocess.py  baseball_example_preprocess.py  baseball_example_run.py
examples/early_retirement_investment_portfolio/: README.md  retirement_example_monte_carlo_sim.py  retirement_example_postprocess.py  retirement_example_preprocess.py  retirement_example_run.py  retirement_example_run_script.py  retirement_example_sim.py
examples/election/: README.md  election_example_monte_carlo_sim.py  election_example_postprocess.py  election_example_preprocess.py  election_example_run.py  election_example_run_script.py  election_example_sim.py  state_presidential_odds.csv
examples/evidence_based_scheduling/: README.md
examples/integration/: README.md  integration_example_monte_carlo_sim.py
examples/pandemic/: README.md  pandemic_example_monte_carlo_sim.py  pandemic_example_postprocess.py  pandemic_example_preprocess.py  pandemic_example_run.py  pandemic_example_run_script.py  pandemic_example_sim.py
examples/retirement/: README.md
examples/rocket/: README.md  rocket_example_monte_carlo_sim.py  rocket_example_postprocess.py  rocket_example_preprocess.py  rocket_example_run.py  rocket_example_run_script.py  rocket_example_sim.py
src/monaco/: MCCase.py  MCEnums.py  MCSim.py  MCVal.py  MCVar.py  MCVarStat.py  README.md  __init__.py  case_runners.py  custom_dists.py  dvars_sensitivity.py  gaussian_statistics.py  globals.py  helper_functions.py  integration_statistics.py  mc_case.py  mc_enums.py  mc_multi_plot.py  mc_plot.py  mc_sampling.py  mc_sim.py  mc_val.py  mc_var.py  mc_varstat.py  order_statistics.py  sobol_sensitivity.py  tqdm_dask_distributed.py
template/: README.md  jupyter_template.ipynb  template_functions.py  template_monte_carlo_sim.py
templates/: README.md  template_functions.py  template_monte_carlo_sim.py  template_postprocess.py  template_preprocess.py  template_run.py  template_run_script.py  template_sim.py
test/: README.md  mcsim_io_test.py  mcsim_io_test_example_run_script.py  mcsim_testing_fcns.py  mytest_example_postprocess.py  mytest_example_preprocess.py  mytest_example_sim.py  n_sphere_sampling_testing.py  pooling_speed_testing.py  test_MCCase.py  test_MCSim.py  test_MCSim_io.py  test_MCVal.py  test_MCVar.py  test_MCVarStat.py  test_example_postprocess.py  test_example_preprocess.py  test_example_sim.py  test_gaussian_statistics.py  test_helper_functions.py  test_integration_statistics.py  test_mc_multi_plot.py  test_mc_plot.py  test_mc_sampling.py  test_order_statistics.py
tests/: DVARStest.py  README.md  mcsim_testing_fcns.py  n_sphere_sampling_testing.py  pickling_size_testing.py  pooling_speed_testing.py  sim_testing_fcns.py  test_MCCase.py  test_MCSim.py  test_MCSim_io.py  test_MCVal.py  test_MCVar.py  test_MCVarStat.py  test_dvars_sensitivity.py  test_gaussian_statistics.py  test_helper_functions.py  test_integration_statistics.py  test_mc_case.py  test_mc_multi_plot.py  test_mc_plot.py  test_mc_sampling.py  test_mc_sim.py  test_mc_sim_io.py  test_mc_val.py  test_mc_var.py  test_mc_varstat.py  test_order_statistics.py  test_sobol_sensitivity.py
