[tool.poetry]
name = "monaco"
version = "0.17.4"
description = "Quantify uncertainty and sensitivities in your models with an industry-grade Monte Carlo library."
authors = ["Scott Shambaugh <scott@theshamblog.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/scottshambaugh/monaco/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
numpy = ">=1.26"
scipy = "^1.11"
matplotlib = "^3.6"
tqdm = "^4.0"
psutil = "^5.0"
cloudpickle = ">=3.0"
pillow = ">=10.3.0"


distributed = {version = ">=2024", optional = true}
pandas = {version = ">=2.2", optional = true}
numba = {version = ">0.57", python = "<3.12", optional = true}

sphinx = {version = "^7.0", optional = true}
sphinx_rtd_theme = {version = "^2.0", optional = true}
myst-parser = {version = ">=0.15", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
coverage = "^7.0"
mypy = ">=1.0"
flake8 = "^5.000"
pre-commit = "^3.0"
requests = "^2.0"

[tool.poetry.extras]
distributed = ["distributed"]
pandas = ["pandas"]
numba = ["numba"]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

[tool.pytest.ini_options]
addopts = "--disable-socket"

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = ["src/monaco"]

[tool.coverage.report]
exclude_lines = ["^if __name__ == ['\"]__main__['\"]:$"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core", "numpy>=2.0.0"]
