[project]
name = "monaco"
version = "0.20.0"
description = "Quantify uncertainty and sensitivities in your models with an industry-grade Monte Carlo library."
authors = [{ name = "Scott Shambaugh", email = "scott@theshamblog.com" }]
requires-python = ">=3.10.0,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "numpy>=1.26",
    "scipy~=1.11",
    "matplotlib~=3.6",
    "tqdm~=4.0",
    "psutil~=5.0",
    "cloudpickle>=3.0",
    "pillow>=10.3.0",
    "typing-extensions>=4.15",
]

[project.optional-dependencies]
distributed = ["distributed>=2024"]
pandas = ["pandas>=2.2"]
numba = ["numba>0.61 ; python_version < '3.14'"]

[project.urls]
Repository = "https://github.com/scottshambaugh/monaco/"

[dependency-groups]
dev = [
    "pytest>=7.2",
    "coverage~=7.0",
    "mypy>=1.0",
    "flake8~=5.0",
    "pre-commit~=3.0",
    "requests~=2.0",
]
docs = [
    "sphinx~=7.0",
    "sphinx_rtd_theme~=2.0",
    "myst-parser>=0.15",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--disable-socket"

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = ["src/monaco"]

[tool.coverage.report]
exclude_lines = ["^if __name__ == ['\"]__main__['\"]:$"]
